--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 
   <!-- Start your project here-->
-  <div style="height: 100vh; background-color: darkkhaki;">
+  <div style="height: 100vh;">
 
     <nav class="navbar navbar-expand-lg navbar-dark primary-color">
       <a class="navbar-brand" href="#">GHIA</a>
