--- a/map.html
+++ b/map.html
@@ -3646,7 +3646,9 @@
 
 <!--<script type="text/javascript" src="js/data.js"></script>-->
 <script type="text/javascript" src="js/color-palettes.js"></script>
-<script type="text/javascript" src="js/manchester-lsoa-super-generalised.js"></script>
+<!--<script type="text/javascript" src="js/manchester-lsoa-full.js"></script>-->
+<script type="text/javascript" src="js/manchester-lsoa-generalised.js"></script>
+<!--<script type="text/javascript" src="js/manchester-lsoa-super-generalised.js"></script>-->
 <script type="text/javascript" src="js/map.js"></script>
 
 <!--<script>-->
